--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -7,8 +7,8 @@ server:
 
 eureka:
   client:
-    registerWithEureka: false #Evita la recursión de su registro
-    fetchRegistry: false
+    registerWithEureka: false         #Evita la recursión de su registro y que sea cliente
+    fetchRegistry: false              #Evita la recursión de su registro y que sea cliente
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
   server:
